--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./index.css">
+    <title>CV</title>
+</head>
+<body>
+    <header>
+    </header>
+    <aside>
+    </aside>
+<main>
+</main>
+  <footer>
+    </footer>
+</body>
+</html>
