feat: add header and aside

--- a/index.html
+++ b/index.html
@@ -8,8 +8,30 @@
 </head>
 <body>
     <header>
+        <h1>Hanna Sholomickaja</h1>
+        <p>future full-stack developer</p>
     </header>
     <aside>
+          <div>
+        <p><img class="photo" src="./photo/ann.jpg"></p>
+        <h3>education</h3>
+            <ul>
+                <li>BSTU: editor-technologist</li>
+                <li>basic courses HTML, CSS, JavaScript on Code Basics and CodeAcademy</li>
+                <li>free part of courses on Yandex.practice (front-end developer, web-designer)</li>
+            </ul>
+        <h3>languages</h3>
+            <ol>
+                <li>english</li>
+                <ul>
+		 <li>A2 (EPAM test)</li>
+                 <li>B2 (EF SET test)</li>
+		</ul>
+                <li>español</li>
+		<ul>
+                <li>A1</li></ul>
+            </ol>
+        </div>
     </aside>
 <main>
 </main>
