--- a/index.html
+++ b/index.html
@@ -34,8 +34,24 @@
         </div>
     </aside>
 <main>
+	<div class="column">
+    <h3>information</h3>
+    <p> My goal is to become a professional full-stack developer, and my priorities are the quantity and continuous improvement of knowledge and skills. Now my experience is small: school, university projects and first stage of previous RSSchool training. But I am trying, I am great at working, dealing with challenges and meeting deadlines. And right now I am already gaining experience that will give me the opportunity to work with you.</p>
+    <h3>skills</h3>
+    <p>Basic knowledge of HTML, CSS, beginner level JavaScript and Git basics.</p>
+    <h3>work experience</h3>
+    <p> Only educational and test projects, mostly from university and RSSChool stage 1 (september training).</p>
+	<h3>code example</h3> 
+    <p><a href="https://github.com/hannahahaha24/bird21">https://github.com/hannahahaha24/bird21</a><p>    
+</div>
 </main>
   <footer>
+	  <div>
+       <h3>contacts</h3>
+        <p>email: charlienhannah@gmail.com</p>
+        <p>telegram: @sinisternowgo</p>
+        <p>phone: +375(29)890-77-66</p>
+    </div>
     </footer>
 </body>
 </html>
