refactor: formatting code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </header>
     <aside>
           <div>
-        <p><img class="photo" src="./photo/ann.jpg"></p>
+        <p><img class="photo" src="./assets/ann.jpg"></p>
         <h3>education</h3>
             <ul>
                 <li>BSTU: editor-technologist</li>
@@ -40,7 +40,7 @@
     <h3>skills</h3>
     <p>Basic knowledge of HTML, CSS, beginner level JavaScript and Git basics.</p>
     <h3>work experience</h3>
-    <p> Only educational and test projects, mostly from university and RSSChool stage 1 (september training).</p>
+    <p> Only educational and test projects, mostly from university and RSSchool stage 1 (september training).</p>
 	<h3>code example</h3> 
     <p><a href="https://github.com/hannahahaha24/bird21">https://github.com/hannahahaha24/bird21</a><p>    
 </div>
